# xyz

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  TUI_README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
agent/: codebase.py  memory.py  memory_store.py  parser.py  permissions.py  planner.py  playbook.py  safety.py  tools.py
gateway/: app.py  cache.py  providers.py
tests/: test_codebase.py  test_config.py  test_memory.py  test_memory_store.py  test_permissions.py  test_playbook.py  test_safety.py  test_tools.py
ui/: __init__.py  app.py  model_picker.py  opencode_tui.py  terminal.py  themes.py  tui.py
ui/components/: __init__.py
ui/panels/: __init__.py  chat_panel.py  command_palette.py  header_panel.py  input_panel.py  status_bar.py
ui/screens/: __init__.py
ui/styles/: __init__.py  app.tcss  main.tcss
ui/widgets/: __init__.py  activity_indicator.py  model_picker.py  stream_text.py
utils/: files.py
xyz/: config.py  main.py
xyz/agent/: tools.py
xyz/utils/: __init__.py  conversation_manager.py  project_analyzer.py
